--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<h2>MENU-</h2>
+						<h2>MENU</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
