--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="download.html">
 										<h2>Project</h2>
 										<div class="content">
 											<p>Dream Home Project</p>
@@ -122,6 +122,7 @@
 										<div class="content">
 											<p>또 다른 <del>틀딱</del> 닉네임..?</p>
 										</div>
+									
 									</a>
 								</article>
 							</section>
