--- a/download.html
+++ b/download.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">KnMango</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Download</span>
 								</a>
 
 							<!-- Nav -->
