--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a>
 										<h2>The Peaceful DISBOARD</h2>
 										<div class="content">
-											<p>평화로운 다섯 친구들이 주요 이용자로, 지인 전용 컨텐츠가 다수인 공간입니다.</p>
+											<p><del>모든 것은 이 단체방에서 시작되었다..</del></p>
 										</div>
 									</a>
 								</article>
