--- a/aboutme.html
+++ b/aboutme.html
@@ -50,11 +50,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>About Blog Owner</h1>
+							<h1>#About Blog Owner</h1>
                             <h2>KnMango* - Minkyo Choi</h2>
 							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 							<p>평범한 고등학교 2학년생입니다. IT관련, 음악, 음향, 전자기기를 좋아합니다.</p><br />
-                            <h1>About Us [Disboard]</h1>
+                            <h1>#About Us [Disboard]</h1>
 							<h2>Kira - Dave Lee</h2>
 							<p>안녕하세요, 디자인학과를 지망하는 평범한 고2 남자입니다.</p>
                             <h2>Kong_White - Sangjoon Yeo</h2>
