--- a/sourceshare.html
+++ b/sourceshare.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Download</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Source</span>
 								</a>
 
 							<!-- Nav -->
@@ -43,18 +43,18 @@
                             <li><a href="aboutme.html">About Me</a></li>
                             <li><a href="project.html">Project(Wip)</a></li>
                             <li><a href="download.html">Download</a></li>
-                            <li><a href="sourceshare.html">Source Share(Wip)</a></li>
+                            <li><a href="sourceshare.html">Source Share</a></li>
                         </ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>#Download</h1>
+							<h1>#KnMango</h1>
 
 							<!-- Text -->
 								<section>
-									<p>KnMango 또는 Disboard 구성원이 작성한 소스 또는 기타 잡다한 것들을 다운로드할 수 있습니다.</p>
+									<p>KnMango.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
