--- a/sourceshare.html
+++ b/sourceshare.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>DizBorD | Download</title>
+		<title>DizBorD | Source</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,7 @@
 
 							<!-- Text -->
 								<section>
-									<p>KnMango.</p>
+									<p>KnMango가 작성한 소스코드를 받아가실 수 있습니다. Github를 기반으로 돌아가는 사이트라, 굳이 이 페이지는 필요가 없을 것 같았으나 </p>
 									<hr />
                                 </section>
 							<!-- Lists -->
