--- a/sourceshare.html
+++ b/sourceshare.html
@@ -54,18 +54,13 @@
 
 							<!-- Text -->
 								<section>
-									<p>KnMango가 작성한 소스코드를 받아가실 수 있습니다. Github를 기반으로 돌아가는 사이트라, 굳이 이 페이지는 필요가 없을 것 같았으나 </p>
+									<p>KnMango가 작성한 소스코드를 받아가실 수 있습니다. Github를 기반으로 돌아가는 사이트라, 굳이 이 페이지는 필요가 없을 것 같았으나 source의 가독성과 초보 분들을 위하여 이 페이지에서도 소스를 공유하기로 결정했습니다.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
 								<section>
 									<h1>#LIST</h1>
-									<!-- <div class="row"> -->
-										<div class="col-6 col-12-medium">
-											<h3>Available List</h3>
-											<ul class="alt">
-												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - MTU값을 변경하여 SNI 차단 회피 가능.</li>
-												<li>WIP</li>
+                                                                        <p></p>
 											</ul>
 											<h3>Developer</h3>
 											<ul>
