--- a/sourceshare.html
+++ b/sourceshare.html
@@ -60,7 +60,7 @@
 							<!-- Lists -->
 								<section>
 									<h1>#LIST</h1>
-                                                                        <p>MTU Changer(bat)
+									<p>MTU Changer(bat)</br>
 										<style type="text/CSS"><code>
 											
 @echo off
@@ -155,6 +155,7 @@ netsh interface ipv4 show interfaces
 echo --
 pause
 											</code></style>
+							</p>
 											</ul>
 											<h3>Developer</h3>
 											<ul>
