--- a/project.html
+++ b/project.html
@@ -54,7 +54,7 @@
 
 							<!-- Text -->
 								<section>
-									<p>KnMango 또는 Disboard 구성원이 제작한 것들과, 기타 잡다한 것들을 다운로드할 수 있습니다.</p>
+									<p>개인 또는 팀 프로젝트를 모아 볼 수 있습니다.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
