--- a/download.html
+++ b/download.html
@@ -65,7 +65,7 @@
 											<h3>Available List</h3>
 											<ul class="alt">
 												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - MTU값을 변경하여 SNI 차단 회피 가능.</li>
-												<li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">ラブライブ！Music Archive(Available, But Work in progress)</a> - 러브라이브!  음원 아카이브.</li>
+												<li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">ラブライブ！Music Archive(Available, But Work in progress)</a> - 러브라이브! 프로젝트의 음원 아카이브.</li>
 											</ul>
 											<h3>Developer</h3>
 											<ul>
