--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									<a href="project.html">
 										<h2>Project</h2>
 										<div class="content">
-											<p>Dream Home Project</p>
+											<p>개인 또는 단체로 진행 중이거나 완료된 프로젝트입니다.</p>
 										</div>
 									</a>
 								</article>
