--- a/aboutme.html
+++ b/aboutme.html
@@ -91,13 +91,10 @@
 							</section>
 							<section>
 								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
+                                <ul class="icons">
+                                    <li><a href="01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+                                    <li><a href="eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                                </ul>
 							</section>
 							<ul class="copyright">
 								<li>&copy; KnMango. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
