--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 							</section>
 							<section>
 								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
+                                <ul class="icons">
+                                    <li><a href="tel:01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+                                    <li><a href="mailto:eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                                </ul>
 							</section>
 							<ul class="copyright">
 								<li>&copy; KnMango. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
