--- a/sourceshare.html
+++ b/sourceshare.html
@@ -95,8 +95,8 @@
 							<section>
 								<h2>Follow</h2>
                                 <ul class="icons">
-                                    <li><a href="01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-                                    <li><a href="eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                                    <li><a href="tel:01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+                                    <li><a href="mailto:eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
                                 </ul>
 							</section>
 							<ul class="copyright">
