--- a/download.html
+++ b/download.html
@@ -136,7 +136,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>C O N T A C T</h2>
+								<h2>C O N T A C T(WIP)</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
