--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="aboutme.html">About Me</a></li>
-                            <li><a href="generic.html">Project</a></li>
+                            <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
                         </ul>
