--- a/sourceshare.html
+++ b/sourceshare.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="inner">
+						<div class="inner">2
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
@@ -54,7 +54,7 @@
 
 							<!-- Text -->
 								<section>
-									<p>KnMango가 작성한 소스코드를 받아가실 수 있습니다. Github를 기반으로 돌아가는 사이트라, 굳이 이 페이지는 필요가 없을 것 같았으나 source의 가독성과 초보 분들을 위하여 이 페이지에서도 소스를 공유하기로 결정했습니다.</p>
+									<p>KnMango가 작성한 소스코드를 받아가실 수 있습니다. 클릭 시 Github의 링크로 이어집니다.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
@@ -74,7 +74,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>C O N T A C T(WIP</h2>
+								<h2>C O N T A C T(WIP)</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
