--- a/outlink.html
+++ b/outlink.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>DizBorD | Project</title>
+		<title>DizBorD | Out-Link</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Project</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">바깥고리</span>
 								</a>
 
 							<!-- Nav -->
@@ -44,17 +44,18 @@
                             <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
+                            <li><a href="outlink.html">Out-Link</a></li>
                         </ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>#Project</h1>
+							<h1>#Out-Link</h1>
 
 							<!-- Text -->
 								<section>
-									<p>개인 또는 팀 프로젝트를 모아 볼 수 있습니다.</p>
+									<p>해당 페이지와 관련된 바깥고리들입니다.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
@@ -62,14 +63,14 @@
 									<h1>#LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
-											<h3>Project List</h3>
+											<h3>Link</h3>
 											<ul class="alt">
-												<li><a href="   ">DHP(Private)</a></li>
-                                                <li><a href="">アキのはこぶね</a></li>
+												<li><a href="">상준쿤 페이지(WIP)</a></li>
+                                                <li><a href="">Nu∑V soundcloud</a></li>
 											</ul>
 											<h3>Developer</h3>
 											<ul>
-												<li>KnMango - Main Developer</li>
+												<li>KnMango</li>
 												<li>Kong_White</li>
 											</ul>
 										</div>
