--- a/sourceshare.html
+++ b/sourceshare.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="inner">2
+						<div class="inner">3
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
@@ -63,7 +63,7 @@
 									<p><a href="https://github.com/KnMango/knmango.github.io/blob/master/MTU%20Changer.txt">MTU Changer(bat)</a></p>
 											<h3>Developer</h3>
 											<ul>
-												<li>KnMango</li>
+												<li>KnMango - Main Developer</li>
 												<li>Kong_White</li>
 											</ul>
                                     </section>
