--- a/download.html
+++ b/download.html
@@ -44,6 +44,7 @@
                             <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
+                            <li><a href="outlink"></a>Out-Link</li>
                         </ul>
 					</nav>
 
@@ -69,66 +70,10 @@
 											</ul>
 											<h3>Developer</h3>
 											<ul>
-												<li>KnMango</li>
+												<li>KnMango - Main Developer</li>
 												<li>Kong_White</li>
 											</ul>
 										</div>
-										<!--<div class="col-6 col-12-medium">
-											<h3>Ordered</h3>
-											<ol>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis viverra.</li>
-												<li>Felis enim feugiat.</li>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis lorem.</li>
-												<li>Felis enim et feugiat.</li>
-											</ol>
-											<!--<h3>Icons</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon style1 fa-github"><span class="label">Github</span></a></li>
-											</ul>
-											<ul class="icons">
-												<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-											</ul>
-										</div>
-                                        </div>-->
-									<!--<h2>Actions</h2>
-									<div class="row">
-										<div class="col-6 col-12-medium">
-											<ul class="actions">
-												<li><a href="#" class="button primary">Default</a></li>
-												<li><a href="#" class="button">Default</a></li>
-											</ul>
-											<ul class="actions small">
-												<li><a href="#" class="button primary small">Small</a></li>
-												<li><a href="#" class="button small">Small</a></li>
-											</ul>
-											<ul class="actions stacked">
-												<li><a href="#" class="button primary">Default</a></li>
-												<li><a href="#" class="button">Default</a></li>
-											</ul>
-											<ul class="actions stacked">
-												<li><a href="#" class="button primary small">Small</a></li>
-												<li><a href="#" class="button small">Small</a></li>
-											</ul>
-										</div>
-										<div class="col-6 col-12-medium">
-											<ul class="actions stacked">
-												<li><a href="#" class="button primary fit">Default</a></li>
-												<li><a href="#" class="button fit">Default</a></li>
-											</ul>
-											<ul class="actions stacked">
-												<li><a href="#" class="button primary small fit">Small</a></li>
-												<li><a href="#" class="button small fit">Small</a></li>
-											</ul>
-										</div>
-									</div>-->
 								</section>
                         </div>
                     </div>
