--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a>
-										<h2>The Peaceful</ br>DISBOARD</h2>
+										<h2>The Peaceful DISBOARD</h2>
 										<div class="content">
 											<p><del>소속 비스무리한거..?</del></p>
 										</div>
