--- a/download.html
+++ b/download.html
@@ -68,11 +68,6 @@
 												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - MTU값을 변경하여 SNI 차단 회피 가능.</li>
 												<li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 음원 아카이브(미완)</a></li>
 											</ul>
-											<h3>Developer</h3>
-											<ul>
-												<li>KnMango - Main Developer</li>
-												<li>Kong_White</li>
-											</ul>
 										</div>
 								</section>
                         </div>
@@ -80,27 +75,15 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+                            <section>
+                                <h2>Developer</h2>
+                                <ul>
+                                    <li>KnMango</li>
+                                    <li>Kong_White</li>
+                                </ul>
+                            </section>
 							<section>
-								<h2>C O N T A C T(WIP)</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
+								<h2>C O N T A C T</h2>
                                 <ul class="icons">
                                     <li><a href="tel:01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
                                     <li><a href="mailto:eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
