--- a/project.html
+++ b/project.html
@@ -44,6 +44,7 @@
                             <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
+                            <li><a href="outlink.html">Out-Link</a></li>
                         </ul>
 					</nav>
 
@@ -79,27 +80,15 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+                            <section>
+                                <h2>Developer</h2>
+                                <ul>
+                                    <li>KnMango</li>
+                                    <li>Kong_White</li>
+                                </ul>
+                            </section>
 							<section>
-								<h2>C O N T A C T(WIP)</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
+								<h2>C O N T A C T</h2>
                                 <ul class="icons">
                                     <li><a href="tel:01039438196" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
                                     <li><a href="mailto:eunho0815@outlook.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
