--- a/outlink.html
+++ b/outlink.html
@@ -66,7 +66,7 @@
 											<h3>Link</h3>
 											<ul class="alt">
 												<li><a href="">Kong_White 페이지(WIP)</a></li>
-                                                <li><a href="">Nu∑V soundcloud</a></li>
+                                                <li><a href="">NUEV soundcloud</a></li>
 											</ul>
 										</div>
 								</section>
