NUEV Soundcloud Link Fix

--- a/outlink.html
+++ b/outlink.html
@@ -63,10 +63,9 @@
 									<h1>#LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
-											<h3>Link</h3>
 											<ul class="alt">
 												<li><a href="">Kong_White 페이지(WIP)</a></li>
-                                                <li><a href="">NUEV soundcloud</a></li>
+                                                <li><a href="https://soundcloud.com/w6ss4l3zqa0m">NUEV soundcloud</a></li>
 											</ul>
 										</div>
 								</section>
