--- a/outlink.html
+++ b/outlink.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">바깥고리</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Out-Link</span>
 								</a>
 
 							<!-- Nav -->
