--- a/download.html
+++ b/download.html
@@ -44,7 +44,7 @@
                             <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="outlink"></a>Out-Link</li>
+                            <li><a href="outlink">Out-Link</a></li>
                         </ul>
 					</nav>
 
