--- a/sourceshare.html
+++ b/sourceshare.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="inner">3
+						<div class="inner">
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
