--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>DizBorD | Out-Link</title>
+		<title>DizBorD | wasabi main</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,7 +51,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>#Out-Link</h1>
+							<h1>wasabi main</h1>
 
 							<!-- Text -->
 								<section>
