--- a/wasabi_rule.html
+++ b/wasabi_rule.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>DizBorD | wasabi main</title>
+		<title>DizBorD | wasabi rule</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">와사비 3rd Gen.</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">와사비 3rd Gen. 규칙</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,26 +51,44 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>와빌님을 사랑하는 비밀단체! (와사비)</h1>
+							<h1>와빌님을 사랑하는 비밀단체! (와사비) 규칙</h1>
 
 							<!-- Text -->
 								<section>
-									<p>와사비에 오신 것을 환영합니다.</p>
+                                    <p>
+                                        규칙 v.1
+
+                                        도움이 필요하신가요?
+                                        방장 또는 부방장에게 부담 없이 연락하시면 익명성을 제대로 보장해드리겠으며, 최대한 신속한 대응과 많은 도움이 될 수 있도록 노력하겠습니다.
+
+                                        채팅관련
+                                        1. 욕설, 비방, 시비성 어투 또는 그에 준하는 모든 행위는 일절 허용하지 않는다.(경고 1)
+                                        1-1. 예외로 패드립의 경우는 즉시 강제퇴출 처분한다.
+                                        2. 타 유튜버 언급은 허용하나 와빌님과 관련되어있지 않은 유튜버에 대한 언급은 허용하지 않는다. (경고 1)
+                                        3. 대화 중 직접적인 성적 발언, 성적 드립 사용 시 즉시 강제퇴출 처분한다.
+
+                                        친목관련
+                                        1. 기본적으로 친목은 허용한다.
+                                        2. 상호간 허락되지 않은 반말성 어투는 허용하지 않는다. (경고 1)
+                                        3. 신입회원 또는 특정 회원을 의도적으로 배제하는 행위는 허용하지 않는다. (경고 1)
+
+                                        이벤트 홍보 관련
+                                        1. 와빌과 관련된 이벤트가 아니라면 무단홍보로 간주한다. (경고 1)
+                                        2. 와빌과 관련된 이벤트라면 먼저 방장에게 허락을 받은 뒤 공식적으로 홍보를 올린다.
+                                        (과정 무시 경고 1)
+
+
+
+                                        강제퇴출 기준
+                                        1. 전체 경고 합이 2가 되면 강제퇴출 처분한다.
+                                        2. 채팅 1-1 항목에 의거, 패드립 사용 시, 강제퇴출 처분한다.
+                                        3. 채팅 3 항목에 의거, 직접적인 성적 발언 또는 성적 드립 사용 시 즉시 강제퇴출 처분한다.
+                                    </p>
 									<hr />
                                 </section>
-							<!-- Lists -->
-								<section>
-									<h1>#LINK</h1>
-									<!-- <div class="row"> -->
-										<div class="col-6 col-12-medium">
-											<ul class="alt">
-												<li><a href="">와사비 규칙</a></li>
-                                                <li><a href="">와사비 경고 현황</a></li>
-											</ul>
-										</div>
-								</section>
                         </div>
-                    </div>
+            </div>
+
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
@@ -94,7 +112,6 @@
 						</div>
 					</footer>
             </div>
-			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
