--- a/wasabi_rule.html
+++ b/wasabi_rule.html
@@ -56,33 +56,32 @@
 							<!-- Text -->
 								<section>
                                     <p>
-                                        규칙 v.1
+                                        규칙 v.1<br /><br />
 
-                                        도움이 필요하신가요?
-                                        방장 또는 부방장에게 부담 없이 연락하시면 익명성을 제대로 보장해드리겠으며, 최대한 신속한 대응과 많은 도움이 될 수 있도록 노력하겠습니다.
+                                        도움이 필요하신가요?<br />
+                                        방장 또는 부방장에게 부담 없이 연락하시면 익명성을 제대로 보장해드리겠으며, 최대한 신속한 대응과 많은 도움이 될 수 있도록 노력하겠습니다.<br /><br />
 
-                                        채팅관련
-                                        1. 욕설, 비방, 시비성 어투 또는 그에 준하는 모든 행위는 일절 허용하지 않는다.(경고 1)
-                                        1-1. 예외로 패드립의 경우는 즉시 강제퇴출 처분한다.
-                                        2. 타 유튜버 언급은 허용하나 와빌님과 관련되어있지 않은 유튜버에 대한 언급은 허용하지 않는다. (경고 1)
-                                        3. 대화 중 직접적인 성적 발언, 성적 드립 사용 시 즉시 강제퇴출 처분한다.
+                                        채팅관련<br />
+                                        1. 욕설, 비방, 시비성 어투 또는 그에 준하는 모든 행위는 일절 허용하지 않는다.(경고 1)<br />
+                                        1-1. 예외로 패드립의 경우는 즉시 강제퇴출 처분한다.<br />
+                                        2. 타 유튜버 언급은 허용하나 와빌님과 관련되어있지 않은 유튜버에 대한 언급은 허용하지 않는다. (경고 1)<br />
+                                        3. 대화 중 직접적인 성적 발언, 성적 드립 사용 시 즉시 강제퇴출 처분한다.<br /><br />
 
-                                        친목관련
-                                        1. 기본적으로 친목은 허용한다.
-                                        2. 상호간 허락되지 않은 반말성 어투는 허용하지 않는다. (경고 1)
-                                        3. 신입회원 또는 특정 회원을 의도적으로 배제하는 행위는 허용하지 않는다. (경고 1)
+                                        친목관련<br />
+                                        1. 기본적으로 친목은 허용한다.<br />
+                                        2. 상호간 허락되지 않은 반말성 어투는 허용하지 않는다. (경고 1)<br />
+                                        3. 신입회원 또는 특정 회원을 의도적으로 배제하는 행위는 허용하지 않는다. (경고 1)<br /><br />
 
-                                        이벤트 홍보 관련
-                                        1. 와빌과 관련된 이벤트가 아니라면 무단홍보로 간주한다. (경고 1)
-                                        2. 와빌과 관련된 이벤트라면 먼저 방장에게 허락을 받은 뒤 공식적으로 홍보를 올린다.
-                                        (과정 무시 경고 1)
-
-
-
-                                        강제퇴출 기준
-                                        1. 전체 경고 합이 2가 되면 강제퇴출 처분한다.
-                                        2. 채팅 1-1 항목에 의거, 패드립 사용 시, 강제퇴출 처분한다.
-                                        3. 채팅 3 항목에 의거, 직접적인 성적 발언 또는 성적 드립 사용 시 즉시 강제퇴출 처분한다.
+                                        이벤트 홍보 관련<br />
+                                        1. 와빌과 관련된 이벤트가 아니라면 무단홍보로 간주한다. (경고 1)<br />
+                                        2. 와빌과 관련된 이벤트라면 먼저 방장에게 허락을 받은 뒤 공식적으로 홍보를 올린다.<br />
+                                        (과정 무시 경고 1)<br />
+                                    </p>
+                                    <p>
+                                        강제퇴출 기준<br />
+                                        1. 전체 경고 합이 2가 되면 강제퇴출 처분한다.<br />
+                                        2. 채팅 1-1 항목에 의거, 패드립 사용 시, 강제퇴출 처분한다.<br />
+                                        3. 채팅 3 항목에 의거, 직접적인 성적 발언 또는 성적 드립 사용 시 즉시 강제퇴출 처분한다.<br />
                                     </p>
 									<hr />
                                 </section>
