--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -64,7 +64,7 @@
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
 											<ul class="alt">
-												<li><a href="">와사비 규칙</a></li>
+												<li><a href="wasabi_rule.html">와사비 규칙</a></li>
                                                 <li><a href="">와사비 경고 현황</a></li>
 											</ul>
 										</div>
