--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -66,6 +66,7 @@
 											<ul class="alt">
 												<li><a href="wasabi_rule.html">와사비 규칙</a></li>
                                                 <li><a href="">와사비 경고 현황</a></li>
+                                                <li><a href="https://discord.gg/ezep8pj">와사비 공식 디스코드</a></li>
 											</ul>
 										</div>
 								</section>
