--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -65,7 +65,7 @@
 										<div class="col-6 col-12-medium">
 											<ul class="alt">
 												<li><a href="wasabi_rule.html">와사비 규칙</a></li>
-                                                <li><a href="">와사비 경고 현황</a></li>
+                                                <li><a href="https://drive.google.com/file/d/17c8U8UbUh0IIjLxoLYjTxU7h2wHszln6/view?usp=sharing">와사비 경고 현황</a></li>
                                                 <li><a href="https://discord.gg/ezep8pj">와사비 공식 디스코드</a></li>
 											</ul>
 										</div>
