--- a/wasabi_rule.html
+++ b/wasabi_rule.html
@@ -64,7 +64,8 @@
                                         채팅관련<br />
                                         1. 욕설, 비방, 시비성 어투 또는 그에 준하는 모든 행위는 일절 허용하지 않는다.(경고 1)<br />
                                         1-1. 예외로 패드립의 경우는 즉시 강제퇴출 처분한다.<br />
-                                        2. 타 유튜버 언급은 허용하나 와빌님과 관련되어있지 않은 유튜버에 대한 언급은 허용하지 않는다. (경고 1)<br />
+                                        2. 타 유튜버 언급은 허용하나 와빌과 관련되어있지 않은 유튜버에 대한 언급은 허용하지 않는다. (경고 1)<br />
+                                        2-1. 타 유튜버 중, 방송/연예 활동을 하는 중이거나 한 이력이 있는 유튜버는 언급 제한 대상에서 제외한다.<br />
                                         3. 대화 중 직접적인 성적 발언, 성적 드립 사용 시 즉시 강제퇴출 처분한다.<br /><br />
 
                                         친목관련<br />
