--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -67,6 +67,7 @@
 												<li><a href="wasabi_rule.html">와사비 규칙</a></li>
                                                 <li><a href="https://drive.google.com/file/d/17c8U8UbUh0IIjLxoLYjTxU7h2wHszln6/view?usp=sharing">와사비 경고 현황</a></li>
                                                 <li><a href="https://discord.gg/ezep8pj">와사비 공식 디스코드</a></li>
+                                                <li><a href="https://forms.gle/rBRFHdC8MngDynqc6">와사비 정모 사전조사 1</a></li>
 											</ul>
 										</div>
 								</section>
