--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
 
 							<!-- Text -->
 								<section>
-									<p>개인 또는 팀 프로젝트를 모아 볼 수 있습니다.</p>
+									<p>개인 또는 팀 프로젝트를 모아 볼 수 있습니다.(WIP)</p>
 									<hr />
                                 </section>
 
@@ -66,7 +66,7 @@
 										<div class="col-6 col-12-medium">
 											<h3>Project List</h3>
 											<ul class="alt">
-												<li><a href="   ">DHP(Private)</a></li>
+												<li><a href="   ">Dream Home Project</a></li>
                                                 <li><a href="">アキのはこぶね</a></li>
 											</ul>
 										</div>
