sibal TTo FIX rani

--- a/download.html
+++ b/download.html
@@ -67,7 +67,7 @@
 											<ul class="alt">
 												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - MTU값을 변경하여 SNI 차단 회피 가능.</li>
 												<li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 음원 아카이브(미완)</a></li>
-                                                <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브 영상 아카이브(미완)</a></li>
+                                                <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브! 영상 아카이브(미완)</a></li>
 											</ul>
 										</div>
 								</section>
