--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="wasabi_main.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">와사비 3rd Gen.</span>
 								</a>
 
