--- a/wasabi_main.html
+++ b/wasabi_main.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>DizBorD | wasabi main</title>
+		<title>Wasabi | Main</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
