download page content(Goodbye DPI) added

--- a/download.html
+++ b/download.html
@@ -56,7 +56,8 @@
 
 							<!-- Text -->
 								<section>
-									<p>KnMango 또는 Disboard 구성원이 제작한 것들과, 기타 잡다한 것들을 다운로드할 수 있습니다.</p>
+									<p>KnMango 또는 Disboard 구성원이 자주 쓰는 소프트웨어나, 기타 잡다한 것들을 다운로드할 수 있습니다.</br>
+                                       저작권 라이센스를 준수하므로 2차 배포는 하지 않습니다.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
@@ -64,9 +65,10 @@
 									<h1>#LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
-											<h3>Available List</h3>
+											<h3>Available</h3>
 											<ul class="alt">
 												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - MTU값을 변경하여 SNI 차단 회피 가능.</li>
+                                                <li><a href="https://github.com/KnMango/GoodbyeDPI">GoodbyeDPI(Forked)</a></li>
 											</ul>
                                             <h3>Archive</h3>
                                             <ul class="alt">
