--- a/wasabi/main.html
+++ b/wasabi/main.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="wasabi/main.html" class="logo">
+								<a href="https://knmango.github.com/wasabi/main" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">와사비 3rd Gen.</span>
 								</a>
 
@@ -65,7 +65,7 @@
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
 											<ul class="alt">
-												<li><a href="wasabi_rule.html">와사비 규칙</a></li>
+												<li><a href="https://knmango.github.com/wasabi/rule">와사비 규칙</a></li>
                                                 <li><a href="https://drive.google.com/file/d/17c8U8UbUh0IIjLxoLYjTxU7h2wHszln6/view?usp=sharing">와사비 경고 현황</a></li>
                                                 <li><a href="https://discord.gg/ezep8pj">와사비 디스코드</a></li>
                                                 <li><a href="https://docs.google.com/forms/d/1GpWV3talCrTIhXryg-LWMXeOQchW4Wvwio2nUHe4xgM"><ins>와사비 정모 사전조사 2</ins></a></li>
