--- a/wasabi/rule.html
+++ b/wasabi/rule.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="https://knmango.github.com/wasabi/main" class="logo">
+								<a href="https://knmango.github.io/wasabi/main" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">와사비 3rd Gen. 규칙</span>
 								</a>
 
