--- a/download.html
+++ b/download.html
@@ -74,6 +74,7 @@
                                             <ul class="alt">
                                                 <li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 음원 아카이브(미완)</a></li>
                                                 <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브! 영상 아카이브(미완)</a></li>
+                                                <li><a href="https://drive.google.com/file/d/1LLgMsOGk64-GSdOISkWCsHX5FD09UqLB/view?usp=sharing">Knots Way(Private)</a></li>
 											</ul>
 										</div>
 								</section>
