--- a/download.html
+++ b/download.html
@@ -67,7 +67,7 @@
 										<div class="col-6 col-12-medium">
 											<h3>Available</h3>
 											<ul class="alt">
-												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - MTU값을 변경하여 SNI 차단 회피 가능.</li>
+												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - <ins>MTU값을 400/15000으로</ins> 변경하여 SNI 차단 회피 가능.</li>
                                                 <li><a href="https://github.com/KnMango/GoodbyeDPI">GoodbyeDPI(Forked)</a></li>
 											</ul>
                                             <h3>Archive</h3>
