Del Wip Pages, main page update(wasabi) Updated index Page

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 						<div class="inner">
 							<header>
 								<h1>KnMango의 DizBorD에 오신 것을 환영합니다!<br /> </h1>
-                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KnMango</a>.</p>
+                                <p>Contact Me: <a href="https://open.kakao.com/o/sLOpRCrb">KakaoTalk OpenChating Profile</a>.</p>
 							</header>
 							<section class="tiles">
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a>
+									<a href="aboutme.html">
 										<h2>The Peaceful DISBOARD</h2>
 										<div class="content">
-											<p><del>소속 비스무리한거..?</del></p>
+											<p><del>소속 비스무리한거..?</del><br />클릭 시 About Me 페이지로 이동합니다.</p>
 										</div>
 									</a>
 								</article>
@@ -72,10 +72,12 @@
 									<span class="image"> 
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="aboutme.html">
-										<h2>About Me</h2>
+									<a>
+										<h2>DizBoarD?</h2>
 										<div class="content">
-											<p>이상하고 괴상한 IT 정보를 좋아합니다. 이것저것 다 건드려보는 진정한 괴짜(?)</p>
+											<p>심심해서 만들어 본 페이지입니다.<br />
+                                            현재 지인들을 위한 컨텐츠 제공 용도로<br />
+                                            사용되고 있습니다.</p>
 										</div>
 									</a>
 								</article>
@@ -98,9 +100,11 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="download.html">
-										<h2>DizBorD?</h2>
+										<h2>Download Page?</h2>
 										<div class="content">
-											<p>다운로드 사이트를 제공합니다.</p>
+											<p>다운로드 링크를 모아놓은 페이지를 <br />
+                                            제공합니다...만은 일부 접근 불가능한<br />
+                                            페이지도 존재합니다.</p>
 										</div>
 									</a>
 								</article>
@@ -111,7 +115,7 @@
 									<a href="project.html">
 										<h2>Project</h2>
 										<div class="content">
-											<p>개인 또는 단체로 진행 중이거나 완료된 프로젝트입니다.</p>
+											<p>개인 또는 단체로 진행 중이거나 완료된 프로젝트입니다. (Wip)</p>
 										</div>
 									</a>
 								</article>
