dl page, srshare page fixed

--- a/sourceshare.html
+++ b/sourceshare.html
@@ -56,14 +56,19 @@
 
                     <!-- Text -->
                     <section>
-                        <p>KnMango가 작성한 소스코드를 받아가실 수 있습니다. 클릭 시 Github의 링크로 이어집니다.</p>
+                        <p>KnMango가 작성한 소스코드나, 개인적으로 유용하다 생각하는 코드들을 받아가실 수 있습니다. 클릭 시 Github의 링크로 이어집니다.</p>
                         <hr />
                     </section>
 
                     <!-- Lists -->
                     <section>
-                        <h1>#LIST</h1>
-                        <p><a href="https://github.com/KnMango/knmango.github.io/blob/master/MTU%20Changer.txt">MTU Changer(bat)</a></p>
+                        <div class="col-6 col-12-medium">
+                            <h3>#List</h3>
+                            <ul class="alt">
+                                <li><a href="https://github.com/KnMango/knmango.github.io/blob/master/MTU%20Changer.txt">MTU Changer(bat)</a></li>
+                                <li><a href="https://github.com/KnMango/GoodbyeDPI">GoodbyeDPI(Forked)</a></li>
+                            </ul>
+                        </div>
                     </section>
                 </div>
             </div>
