Developer Name Fix(All of Pages)

--- a/wasabi/rule.html
+++ b/wasabi/rule.html
@@ -96,7 +96,7 @@
                                 <h2>Developer</h2>
                                 <ul>
                                     <li>KnMango</li>
-                                    <li>Kong_White</li>
+                                    <li>Kong_White (Sub Developer)</li>
                                 </ul>
                             </section>
 							<section>
