--- a/wasabi/main.html
+++ b/wasabi/main.html
@@ -81,7 +81,7 @@
                                 <h2>Developer</h2>
                                 <ul>
                                     <li>KnMango</li>
-                                    <li>Kong_White</li>
+                                    <li>Kong_White (Sub Developer)</li>
                                 </ul>
                             </section>
 							<section>
