--- a/wasabi/main.html
+++ b/wasabi/main.html
@@ -68,7 +68,7 @@
 												<li><a href="https://knmango.github.io/wasabi/rule">와사비 규칙</a></li>
                                                 <li><a href="https://drive.google.com/file/d/17c8U8UbUh0IIjLxoLYjTxU7h2wHszln6/view?usp=sharing">와사비 경고 현황</a></li>
                                                 <li><a href="https://discord.gg/ezep8pj">와사비 디스코드</a></li>
-                                                <li><a href="https://docs.google.com/forms/d/1GpWV3talCrTIhXryg-LWMXeOQchW4Wvwio2nUHe4xgM"><ins>와사비 정모 사전조사 2</ins></a></li>
+                                                <li><a href=""><ins>와사비 정모 사전조사 2</ins></a></li>
 											</ul>
 										</div>
 								</section>
