--- a/sourceshare.html
+++ b/sourceshare.html
@@ -65,7 +65,8 @@
                         <div class="col-6 col-12-medium">
                             <h3>#List</h3>
                             <ul class="alt">
-                                <li><a href="https://github.com/KnMango/knmango.github.io/blob/master/MTU%20Changer.txt">MTU Changer(bat)</a></li>
+                                <li><a><del>MTU Changer(bat)</del></a></li>
+                                <li><a href="">MTU Changer(batch to C)</a></li>
                                 <li><a href="https://github.com/KnMango/GoodbyeDPI">GoodbyeDPI(Forked)</a></li>
                             </ul>
                         </div>
