--- a/wasabi/main.html
+++ b/wasabi/main.html
@@ -44,7 +44,7 @@
                             <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="outlink.html">Out-Link</a></li>
+                            <li><a href="outlink.html">Out-Link(Wip)</a></li>
                         </ul>
 					</nav>
 
@@ -56,6 +56,7 @@
 							<!-- Text -->
 								<section>
 									<p>와사비에 오신 것을 환영합니다.</p>
+                                    <p>새벽이는 에반이 꼬맹이버전입니다~~~~!!!!!~!~!!!~!</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
