--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<a>
 										<h2>Why Github.io?</h2>
 										<div class="content">
-											<p>이 페이지는 Github Pages를 기반으로 동작합니다.</p>
+											<p>이 페이지는 Github Pages를 기반으로<br />호스트됩니다. <del>저예산 유저의 비애</del></p>
 										</div>
 									
 									</a>
