Download Page Fix

--- a/download.html
+++ b/download.html
@@ -69,12 +69,16 @@
 											<ul class="alt">
 												<li><a href="https://drive.google.com/open?id=1eUKaTLhBhyR62sxdUQQBuwgSBd4j0rgt">Mtu amount changer (bat)</a> - <ins>MTU값을 400/1500으로</ins> 변경하여 SNI 차단 회피 가능.</li>
 											</ul>
-                                            <h3>Archive</h3>
+                                            <h3>Archive - Public</h3>
                                             <ul class="alt">
-                                                <li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 음원 아카이브(미완)</a></li>
-                                                <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브! 영상 아카이브(미완)</a></li>
-                                                <li><a href="https://drive.google.com/file/d/1LLgMsOGk64-GSdOISkWCsHX5FD09UqLB/view?usp=sharing">Knots Way(Private)</a></li>
-                                                <li><a href="https://drive.google.com/drive/folders/1lo4e9MySJiRNLLypK6wAPEjWuziwMLcC?usp=sharing">PRIMROSE FLOWER VOICE(Private)</a></li>
+                                                <li><a href="https://drive.google.com/drive/folders/1NFcI8F1sdDkHm0lWOCpLKwZ0tPcI36gu?usp=sharing">러브라이브! 시리즈 음원 아카이브</a></li>
+                                                <li><a href="https://drive.google.com/open?id=16PVZ08TFavxzunV_kiLPsehvfw40DxPE">러브라이브! 영상 아카이브</a></li>
+                                                <li><a href="">러브라이브! 선샤인! 영상 아카이브</a></li>
+                                            </ul>
+                                            <h3>Archive - Private</h3>
+                                            <ul class="alt">
+                                                <li><a href="https://drive.google.com/file/d/1LLgMsOGk64-GSdOISkWCsHX5FD09UqLB/view?usp=sharing">Knots Way</a></li>
+                                                <li><a href="https://drive.google.com/drive/folders/1lo4e9MySJiRNLLypK6wAPEjWuziwMLcC?usp=sharing">PRIMROSE FLOWER VOICE</a></li>
 											</ul>
 										</div>
 								</section>
