--- a/download.html
+++ b/download.html
@@ -80,7 +80,7 @@
                                                 <li><a href="https://drive.google.com/file/d/1LLgMsOGk64-GSdOISkWCsHX5FD09UqLB/view?usp=sharing">Knots Way</a></li>
                                                 <li><a href="https://drive.google.com/drive/folders/1lo4e9MySJiRNLLypK6wAPEjWuziwMLcC?usp=sharing">PRIMROSE FLOWER VOICE</a></li>
 											</ul>
-											<h3>Archive - Beta Content(Use Own Server)<h3>
+											<h3>Archive - Beta Content(Use Own Server)</h3>
 											<ul class="alt">
 												<li><a href="">Anime Song Archive(Beta)</a></li>
 												<li><a href="">Anime Video Archive(Beta)</a></li>
