--- a/download.html
+++ b/download.html
@@ -82,7 +82,7 @@
 											</ul>
 											<h3>Archive - Beta Content(Use Own Server)</h3>
 											<ul class="alt">
-												<li><a href="">Anime Song Archive(Beta)</a></li>
+												<li><a href="archive.html">Anime Song Archive(Beta)</a></li>
 												<li><a href="">Anime Video Archive(Beta)</a></li>
 												<li><a href="">Utaite Song Archive(Beta)</a></li>
 											</ul>
