--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <li><a href="project.html">Project</a></li>
                             <li><a href="download.html">Download</a></li>
                             <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="outlink.html">Out-Link</a></li>
+                            <li><a href="server.html">Server Stat(beta)</a></li>
                         </ul>
 					</nav>
 
