--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
 										<h2>Devices</h2>
 										<div class="content">
 											<p>iPhone 6S<br />
-                                            iPad Mini 2nd Gen.<br />
-                                            Samsung notebook With - <br />
+                                            MSI Labtop With - <br />
+(i7-4720HQ, 12GB RAM, 128GB SSD x2, 1TB HDD)<br />
+                                            Samsung Labtop With - <br />
                                             (i5-5200U, 4GB Ram, 128GB SSD)</p>
 										</div>
 									</a>
