--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<div class="content">
 											<p>iPhone 6S<br />
                                             MSI Labtop With - <br />
-(i7-4720HQ, 12GB RAM, 128GB SSD x2, 1TB HDD)<br />
+(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
                                             Samsung Labtop With - <br />
                                             (i5-5200U, 4GB Ram, 128GB SSD)</p>
 										</div>
