--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<div class="content">
 											<p>iPhone 6S<br />
                                             MSI Labtop With - <br />
-(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
+											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
                                             Samsung Labtop With - <br />
                                             (i5-5200U, 4GB Ram, 128GB SSD)</p>
 										</div>
@@ -113,10 +113,10 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="project.html">
-										<h2>Project</h2>
+									<a>
+										<h2>Devices 2</h2>
 										<div class="content">
-											<p>개인 또는 단체로 진행 중이거나 완료된 프로젝트입니다. (Wip)</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
