--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a>
-										<h2>DizBoarD?</h2>
+										<h2>DizBorD?</h2>
 										<div class="content">
 											<p>심심해서 만들어 본 페이지입니다.<br />
                                             현재 지인들을 위한 컨텐츠 제공 용도로<br />
@@ -89,9 +89,9 @@
 										<h2>Devices</h2>
 										<div class="content">
 											<p>iPhone 6S<br />
-                                            MSI Labtop With - <br />
+                                            MSI Laptop With - <br />
 											(i7-4720HQ, 12GB RAM, 128GB SSD x2,<br />1TB HDD, Geforce GTX 970M)<br />
-                                            Samsung Labtop With - <br />
+                                            Samsung Laptop With - <br />
                                             (i5-5200U, 4GB Ram, 128GB SSD)</p>
 										</div>
 									</a>
