방장한테 대들면 좆되는거야~~~

--- a/wasabi/rule.html
+++ b/wasabi/rule.html
@@ -58,31 +58,11 @@
                                     <p>
                                         규칙 v.1<br /><br />
 
-                                        도움이 필요하신가요?<br />
-                                        방장 또는 부방장에게 부담 없이 연락하시면 익명성을 제대로 보장해드리겠으며, 최대한 신속한 대응과 많은 도움이 될 수 있도록 노력하겠습니다.<br /><br />
-
-                                        채팅관련<br />
-                                        1. 욕설, 비방, 시비성 어투 또는 그에 준하는 모든 행위는 일절 허용하지 않는다.(경고 1)<br />
-                                        1-1. 예외로 패드립의 경우는 즉시 강제퇴출 처분한다.<br />
-                                        2. 타 유튜버 언급은 허용하나 와빌과 관련되어있지 않은 유튜버에 대한 언급은 허용하지 않는다. (경고 1)<br />
-                                        2-1. 타 유튜버 중, 방송/연예 활동을 하는 중이거나 한 이력이 있는 유튜버는 언급 제한 대상에서 제외한다.<br />
-                                        3. 대화 중 직접적인 성적 발언, 성적 드립 사용 시 즉시 강제퇴출 처분한다.<br /><br />
-
-                                        친목관련<br />
-                                        1. 기본적으로 친목은 허용한다.<br />
-                                        2. 상호간 허락되지 않은 반말성 어투는 허용하지 않는다. (경고 1)<br />
-                                        3. 신입회원 또는 특정 회원을 의도적으로 배제하는 행위는 허용하지 않는다. (경고 1)<br /><br />
-
-                                        이벤트 홍보 관련<br />
-                                        1. 와빌과 관련된 이벤트가 아니라면 무단홍보로 간주한다. (경고 1)<br />
-                                        2. 와빌과 관련된 이벤트라면 먼저 방장에게 허락을 받은 뒤 공식적으로 홍보를 올린다.<br />
-                                        (과정 무시 경고 1)<br />
-                                    </p>
-                                    <p>
-                                        강제퇴출 기준<br />
-                                        1. 전체 경고 합이 2가 되면 강제퇴출 처분한다.<br />
-                                        2. 채팅 1-1 항목에 의거, 패드립 사용 시, 강제퇴출 처분한다.<br />
-                                        3. 채팅 3 항목에 의거, 직접적인 성적 발언 또는 성적 드립 사용 시 즉시 강제퇴출 처분한다.<br />
+                                        0. 매너채팅<br />
+                                        1. 욕설, 비방, 성적 발언 금지<br />
+                                        2. 친목, 동의 후 반말 가능<br />
+                                        3. 대화에 끼고싶은데 못 끼겠으면 방장이랑 부방장한테 꼭 말해주세요<br />
+                                        4. 분쟁 발생 시, 본 방에서는 싸움 금지. 물 흐림 위험도 있고, 다른 분들도 불편하시니 따로 방을 파셔서 담판을 지어주세요.<br />
                                     </p>
 									<hr />
                                 </section>
