--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a>
-										<h2>Devices 2</h2>
+										<h2>Server</h2>
 										<div class="content">
-											<p></p>
+											<p>조만간 자체 서버 테스트를 할 예정입니다.</p>
 										</div>
-									</a>
+1									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
@@ -142,7 +142,7 @@
                             <section>
                                 <h2>Developer</h2>
                                 <ul>
-                                    <li>KnMango</li>
+                                    <li><a href="scarchive.html">KnMango</a></li>
                                     <li>Kong_White (Sub Developer)</li>
                                 </ul>
                             </section>
