--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>조만간 자체 서버 테스트를 할 예정입니다.</p>
+											<p>곧 자체 서버 테스트를 할 예정입니다.</p>
 										</div>
 									</a>
 								</article>
