--- a/wasabi/rule.html
+++ b/wasabi/rule.html
@@ -63,6 +63,7 @@
                                         2. 친목, 동의 후 반말 가능<br />
                                         3. 대화에 끼고싶은데 못 끼겠으면 방장이랑 부방장한테 꼭 말해주세요<br />
                                         4. 분쟁 발생 시, 본 방에서는 싸움 금지. 물 흐림 위험도 있고, 다른 분들도 불편하시니 따로 방을 파셔서 담판을 지어주세요.<br />
+                                        5. 이유없는 들낙은 자제해주세요.(ex. 다툼, 단순 변심 등) 어그로, 물흐림 등의 문제를 불러올 수 있습니다.
                                     </p>
 									<hr />
                                 </section>
