--- a/outlink.html
+++ b/outlink.html
@@ -56,7 +56,7 @@
 
 							<!-- Text -->
 								<section>
-									<p>해당 페이지와 관련된 바깥고리들입니다.</p>
+									<p>주인장이 메모 용도, 실사용 용도로 걸어놓은 링크들입니다.</p>
 									<hr />
                                 </section>
 							<!-- Lists -->
@@ -67,7 +67,8 @@
 											<ul class="alt">
 												<li><a href="">Kong_White 페이지(WIP)</a></li>
                                                 <li><a href="https://soundcloud.com/w6ss4l3zqa0m">NUEV soundcloud</a></li>
-											</ul>
+											    <li><a href="http://pictogram2.com">Non-Copyright 아이콘 사이트</a>
+                                            </ul>
 										</div>
 								</section>
                         </div>
