--- a/outlink.html
+++ b/outlink.html
@@ -67,7 +67,7 @@
 											<ul class="alt">
 												<li><a href="">Kong_White 페이지(WIP)</a></li>
                                                 <li><a href="https://soundcloud.com/w6ss4l3zqa0m">NUEV soundcloud</a></li>
-											    <li><a href="http://pictogram2.com">Non-Copyright 아이콘 사이트</a>
+											    <li><a href="http://pictogram2.com">Non-Copyright 아이콘 사이트</a></li>
                                             </ul>
 										</div>
 								</section>
