--- a/wasabi/main.html
+++ b/wasabi/main.html
@@ -37,14 +37,11 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<h2>Menu</h2>
+						<h2>Wasabi Menu</h2>
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="aboutme.html">About Me</a></li>
-                            <li><a href="project.html">Project</a></li>
-                            <li><a href="download.html">Download</a></li>
-                            <li><a href="sourceshare.html">Source Share</a></li>
-                            <li><a href="outlink.html">Out-Link(Wip)</a></li>
+                            <li><a href="main.html">Main</a></li>
+                            <li><a href="rule.html">Rules</a></li>
+                            <iframe src="https://discordapp.com/widget?id=626050700383879198&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
                         </ul>
 					</nav>
 
@@ -67,8 +64,7 @@
 											<ul class="alt">
 												<li><a href="https://knmango.github.io/wasabi/rule">와사비 규칙</a></li>
                                                 <li><a href="https://drive.google.com/file/d/17c8U8UbUh0IIjLxoLYjTxU7h2wHszln6/view?usp=sharing">와사비 경고 현황</a></li>
-                                                <li><a href="https://discord.gg/ezep8pj">와사비 디스코드</a></li>
-                                                <li><a href=""><ins>와사비 정모 사전조사 2</ins></a></li>
+                                                <li><a href="https://discord.gg/thBcN73">와사비 디스코드</a></li>
 											</ul>
 										</div>
 								</section>
